# ESP32_P4_SLAM

./: .gitignore  CMakeLists.txt  ESP32-C6_Documentation.md  README.md  WiFi_Toggle_Implementation.md  partitions.csv  pytest_wifi_scanning.py  sdkconfig  sdkconfig.defaults.esp32p4  sdkconfig.sdcard_priority
.github/: copilot-instructions.md
common_components/sensor_init/: example_sensor_init.c
components/assistnow/: CMakeLists.txt  assistnow.c
components/c6_web_server/: CMakeLists.txt  slam_web_server.c
components/camera/: CMakeLists.txt  camera_init.c  camera_init.h
components/communication/: CMakeLists.txt  communication_manager.c  communication_protocol.c
components/communication/include/: communication_manager.h  communication_protocol.h
components/config_loader/: CMakeLists.txt  config_loader.c  config_loader.c.backup
components/gps_ublox/: CMakeLists.txt  gps_ublox.c
components/imu_bmi088/: CMakeLists.txt  imu_bmi088.c
components/msp_protocol/: CMakeLists.txt  msp_protocol.c
components/orb_features/: CMakeLists.txt  orb_features.c
components/sd_storage/: CMakeLists.txt  map_manager.c  sd_storage.c.backup  sd_storage_sdmmc.c  sd_storage_spi.c
components/sd_storage/include/: sd_storage.h
components/sensor_fusion/: CMakeLists.txt  parameter_validator.c  parameter_validator.h  sensor_fusion.c
components/slam_core/: CMakeLists.txt  slam_core.c
components/web_server/: web_server.c  (+1 more)
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
config_defaults/: camera_config.json  msp_config.json  system_config.json
config_templates/: README.md  config_integration_example.c  deploy_config.bat  deploy_config.sh  fusion_config.json  gps_config.json  imu_config.json  slam_config.json  system_config.json
main/: CMakeLists.txt  camera_init.c  camera_init.h  direct_camera.c  direct_camera.h  dronecam_main.c  esp32p4_pin_config.h  idf_component.yml  simple_camera.c  simple_camera.h  visual_slam_inav.h  visual_slam_main.c  visual_slam_types.h
slave/: README.md  sdkconfig
tools/: wigle_converter.py
(+38 files in other folders)
